--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NODE_ENV=development
 PORT=4000
 AUTH_MODE=false
-JWT_SECRET_KEY=secret-key
-JWT_REFRESH_SECRET_KEY=refresh-secret-key
+JWT_SECRET_KEY=my-secret
+JWT_REFRESH_SECRET_KEY=refresh-my-secret
 # Set your database connection information here
-MONGO_CONNECTION_STRING=mongodb+srv://Crew:xfirf_24@cluster0-ckrgz.mongodb.net/learn-words?authSource=admin&replicaSet=Cluster0-shard-0&readPreference=primary&appname=MongoDB%20Compass%20Community&ssl=true
+MONGO_CONNECTION_STRING=mongodb+srv://RSS2020:admin@cluster0.jxq8f.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
