--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "http-status-codes": "^1.4.0",
     "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.9.7",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
