feat:connected api cloudinary

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ JWT_SECRET_KEY=my-secret
 JWT_REFRESH_SECRET_KEY=refresh-my-secret
 # Set your database connection information here
 MONGO_CONNECTION_STRING=mongodb+srv://RSS2020:admin@cluster0.jxq8f.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+CLOUDINARY_CLOUD_NAME=dtovf0jpx
+CLOUDINARY_API_KEY=693362651467173
+CLOUDINARY_API_SECRET=1DO0ZRpghOU0CG9rR7H-C8-2-pQ
