--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "bcrypt": "^4.0.1",
+    "cloudinary": "^1.25.1",
     "cors": "^2.8.5",
     "cross-env": "6.0.3",
     "dotenv": "8.2.0",
